[gd_scene load_steps=10 format=3 uid="uid://cokx3oev2rafs"]

[ext_resource type="FontFile" uid="uid://d0nn8s6iks32j" path="res://addons/ridiculous_stream/ui/jetbrains_mono_ttf/JetBrainsMono-Bold.ttf" id="1_6idbc"]
[ext_resource type="Script" path="res://addons/ridiculous_stream/instances/notification_vetting_reward.gd" id="2_xw4nt"]
[ext_resource type="Texture2D" uid="uid://c0ftqqm0pd0hw" path="res://addons/ridiculous_stream/ui/sprites/ico_tick_double.png" id="3_vej0d"]
[ext_resource type="Texture2D" uid="uid://838cfol1rq3b" path="res://addons/ridiculous_stream/ui/sprites/ico_tick.png" id="4_yjwsg"]
[ext_resource type="Texture2D" uid="uid://bhau4fpfk2m1v" path="res://addons/ridiculous_stream/ui/sprites/ico_warn.png" id="5_b7qhp"]
[ext_resource type="Texture2D" uid="uid://c4stpg1ir725c" path="res://addons/ridiculous_stream/ui/sprites/ico_decline.png" id="6_n71kh"]
[ext_resource type="Texture2D" uid="uid://dv4awlnhln7py" path="res://addons/ridiculous_stream/ui/sprites/ico_decline_all.png" id="7_pgcb3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1vyss"]
content_margin_left = 12.0
content_margin_top = 12.0
content_margin_right = 12.0
content_margin_bottom = 12.0
bg_color = Color(0.129412, 0.14902, 0.180392, 1)
border_width_left = 1
border_width_right = 1

[sub_resource type="Theme" id="Theme_ijhb3"]
default_font = ExtResource("1_6idbc")
PanelContainer/styles/panel = SubResource("StyleBoxFlat_1vyss")

[node name="notification_vetting_reward" type="PanelContainer"]
custom_minimum_size = Vector2(7.375, 13.39)
offset_right = 379.0
offset_bottom = 147.0
theme = SubResource("Theme_ijhb3")
theme_override_styles/panel = SubResource("StyleBoxFlat_1vyss")
script = ExtResource("2_xw4nt")

[node name="vb" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="title" type="Label" parent="vb"]
unique_name_in_owner = true
modulate = Color(0.215686, 0.878431, 0.701961, 1)
layout_mode = 2
text = "Custom Reward title"

[node name="msg" type="TextEdit" parent="vb"]
unique_name_in_owner = true
layout_mode = 2
text = "very long message here because we need to discuss if the message is multiple lines long. It usually isn't but just in case you know"
context_menu_enabled = false
wrap_mode = 1
scroll_fit_content_height = true

[node name="hb" type="HBoxContainer" parent="vb"]
layout_mode = 2

[node name="username" type="Label" parent="vb/hb"]
unique_name_in_owner = true
modulate = Color(0.831373, 0.141176, 0.65098, 1)
layout_mode = 2
size_flags_horizontal = 3
text = "username"

[node name="btns" type="HBoxContainer" parent="vb/hb"]
layout_mode = 2

[node name="btn_accept_all" type="Button" parent="vb/hb/btns"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
icon = ExtResource("3_vej0d")
icon_alignment = 1
expand_icon = true

[node name="btn_accept" type="Button" parent="vb/hb/btns"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
icon = ExtResource("4_yjwsg")
icon_alignment = 1
expand_icon = true

[node name="btn_warn" type="Button" parent="vb/hb/btns"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
icon = ExtResource("5_b7qhp")
icon_alignment = 1
expand_icon = true

[node name="btn_decline" type="Button" parent="vb/hb/btns"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
icon = ExtResource("6_n71kh")
icon_alignment = 1
expand_icon = true

[node name="btn_decline_all" type="Button" parent="vb/hb/btns"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
icon = ExtResource("7_pgcb3")
icon_alignment = 1
expand_icon = true

[node name="cnt_warnings" type="HBoxContainer" parent="vb/hb"]
unique_name_in_owner = true
layout_mode = 2

[node name="warn_count" type="Label" parent="vb/hb/cnt_warnings"]
unique_name_in_owner = true
modulate = Color(0.831373, 0.141176, 0.65098, 1)
layout_mode = 2
text = "00"

[node name="TextureRect" type="TextureRect" parent="vb/hb/cnt_warnings"]
modulate = Color(0.776471, 0.72549, 0, 1)
custom_minimum_size = Vector2(14, 14)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("5_b7qhp")
expand_mode = 1
stretch_mode = 5

[connection signal="pressed" from="vb/hb/btns/btn_accept_all" to="." method="_on_btn_accept_all_pressed"]
[connection signal="pressed" from="vb/hb/btns/btn_accept" to="." method="_on_btn_accept_pressed"]
[connection signal="pressed" from="vb/hb/btns/btn_warn" to="." method="_on_btn_warn_pressed"]
[connection signal="pressed" from="vb/hb/btns/btn_decline" to="." method="_on_btn_decline_pressed"]
[connection signal="pressed" from="vb/hb/btns/btn_decline_all" to="." method="_on_btn_decline_all_pressed"]
